# torch-receptive-field

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pr_checks.yml
torch_receptive_field/: __init__.py  main.py
