[tool.poetry]
name = "torch-receptive-field"
version = "0.0.1"
description = ""
license = "MIT"
authors = ["mhsb <michael.h.s.ball@gmail.com>"]
homepage = 'https://github.com/michaelhball/torch-receptive-field'
repository = 'https://github.com/michaelhball/torch-receptive-field'
keywords = ['torch', 'receptive field', 'CNN']
include = ["LICENSE"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.7.1"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core>=1.8.3"]
build-backend = "poetry.core.masonry.api"