[tool.poetry]
name = "torch-receptive-field"
version = "0.0.1"
description = "Compute and visualise the receptive fields of torch CNNs"
license = "MIT"
authors = ["mhsb <michael.h.s.ball@gmail.com>"]
homepage = 'https://github.com/michaelhball/torch-receptive-field'
repository = 'https://github.com/michaelhball/torch-receptive-field'
keywords = ['torch', 'receptive field', 'CNN']
include = ["LICENSE"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.7.1"
ruff = "^0.4.4"
tabulate = "^0.9.0"
torch = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^8.2.0"
pytest-sugar = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.8.3"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
select = ["E", "F", "I", "TID", "W"]
exclude = [".git", ".ruff_cache", "dist", "docker", "img"]
fix = false
ignore-init-module-imports = true
line-length = 120
target-version = "py38"  # assume Python 3.8 style

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.isort]
combine-as-imports = true
force-single-line = false
order-by-type = false